# filetransfer

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  dl.rs  main.rs  router.rs  upload.rs
upload/: ()The Book jojos bizarre adventure 4th another day_Japanese_—_—_— (Z-Library).epub  asao_monogatari.txt
